--- a/02-counter-app/src/index.css
+++ b/02-counter-app/src/index.css
@@ -1,13 +1,8 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-color: #21232a;
+  color: white;
+  font-family: Helvetica, Times, serif;
+  font-size: 1.3rem;
+  padding: 70px;
 }
